[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pylint.master]
extension-pkg-allow-list = ['cryptography']

[tool.pylint.messages_control]
disable = [
    'missing-docstring',
    'too-few-public-methods',
    'import-error'
]